--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 </head>
 
 <body>
+
+    <!-- navbar -->
     <nav class="navbar navbar-dark navbar-expand-sm fixed-top">
         <div class="container">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
@@ -32,6 +34,8 @@
             </div>            
         </div>
     </nav>
+
+    <!-- jumbotron -->
     <header class="jumbotron">
         <div class="container">
             <div class="row row-header">
@@ -39,14 +43,19 @@
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
-                <div class="col-12 col-sm align-self-center">
-                    <img src="img/logo.png" class="img-fluid">
+                <div class="col-12 col-sm-3 align-self-center">
+                    <img src="img/logo.png" class="img-fluid ">
+                </div>
+                <div class="col-12 col-sm-3 align-self-center">
+                    <button type="button" class="btn btn-warning btn-block btn-sm"><a id="reservelink" href="#reserveform" >Reserve Table</a></button>
                 </div>
             </div>
         </div>
     </header>
 
     <div class="container">
+
+        <!-- index.html/row1/uthapizza -->
         <div class="row row-content align-items-center">
             <div class="col-12 col-sm-4 col-md-3 order-sm-last">
                 <h3>Our Lipsmacking Culinary Creations</h3>
@@ -62,17 +71,24 @@
             </div>
         </div>
 
-
+        <!-- index.html/row2  -->
         <div class="row row-content align-items-center">
             <div class="col-12 col-sm-4  col-md-3">
                 <h3>This Month's Promotions</h3>
             </div>
             <div class="col col-sm  col-md">
-                <h2>Weekend Grand Buffet</h2>
-                <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+                <div class="media">
+                    <div class="media-body">
+                        <h2 class="mt-0">Weekend Grand Buffet <span class="badge badge-danger">NEW</span></h2>
+                        <p class="d-none d-sm-block">Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+                    </div>
+                    <img class="d-flex mr-3 img-thumbnail align-self-center" src="img/buffet.png" alt="buffet">
+                </div>
+               
             </div>
         </div>
 
+        <!--iNDEX.HTML/row3 /alberto -->
         <div class="row row-content align-items-center">
             <div class="col-12 col-sm-4 col-md-3 order-sm-last">
                 <h3>Meet our Culinary Specialists</h3>
@@ -88,6 +104,56 @@
                 </div>
             </div>
         </div>
+
+        <!-- row4/card guests -->
+        <div class="row row-content align-items-center">
+            <div class="col-12 col-sm-8 offset-sm-2 ">
+                <div class="card">
+                    <h3 class="card-header bg-warning text-white">Reserve a table</h3>
+                    <div class="card-body">
+                        <form id="reserveform">
+                            <div class="form-group row">
+                                <label class="col-md-2 col-form-label" for="firstname">Number of Guests</label>
+                                <div class="col-2 col-md-1 offset-1">
+                                    <input class="form-check-input" type="radio" name="guest" id="a" value=""><label for="a">1</label>
+                                </div>
+                                <div class="col-2 col-md-1">
+                                    <input class="form-check-input" type="radio" name="guest" id="b" value=""><label for="b">2</label>
+                                </div>
+                                <div class="col-2 col-md-1">
+                                    <input class="form-check-input" type="radio" name="guest" id="c" value=""><label for="c">3</label>
+                                </div>
+                                <div class="col-2 col-md-1">
+                                    <input class="form-check-input" type="radio" name="guest" id="d" value=""><label for="d">4</label>
+                                </div>
+                                <div class="col-2 col-md-1">
+                                    <input class="form-check-input" type="radio" name="guest" id="e" value=""><label for="e">5</label>
+                                </div>
+                                <div class="col-2 offset-1 col-md-1 offset-sm-0 ">
+                                    <input class="form-check-input" type="radio" name="guest" id="f" value=""><label for="f">6</label>
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <label class="col-12 col-md-2 col-form-label" for="time">Date and Time</label>
+                                <div class="col-12 col-md-4">
+                                    <input type="date" class="form-control" id="date" name="date">
+                                </div>
+                                <div class=" col-12 col-md-4">
+                                    <input type="time" class="form-control" id="time" name="time">
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <div class="offset-md-2 col-md-2">
+                                <button type="submit" class="btn btn-primary">Reserve</button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
     </div>
 
     <footer class="footer">
@@ -113,7 +179,7 @@
                       <i class="fa fa-envelope fa-lg"></i>: <a href="mailto:eminabdurahmanov321@gmail.com">confusion@food.net</a>
 		           </address>
                 </div>
-                <div class="col-12 col-sm-4 align-self-center">
+                <div class="col-12 offset-2 col-sm-4 offset-sm-0 align-self-center ">
                     <div>
                         <a class="btn btn-social-icon btn-google" href="http://google.com/+"><i class="fa fa-google-plus"></i></a>
                         <a class="btn btn-social-icon btn-facebook" href="http://www.facebook.com/profile.php?id="><i class="fa fa-facebook"></i></a>
