--- a/index.html
+++ b/index.html
@@ -89,13 +89,86 @@
                     <img src="img/logo.png" class="img-fluid ">
                 </div>
                 <div class="col-12 col-sm-3 align-self-center">
-                    <button type="button" class="btn btn-warning nav-link btn-block btn-sm"><a 
-                        id="reservelink" data-toggle="tooltip" data-html="true"  title="Or Call us at  <br><strong>+852 12345678</strong>"
-                        data-placement="bottom" href="#reserveform" >Reserve Table</a></button>
+                    <button type="button"  class="btn  btn-warning nav-link btn-block btn-sm text-white " data-toggle="modal" data-target="#exampleModal">
+                        Reserve a Table
+                    </button>
                 </div>
             </div>
         </div>
     </header>
+        <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                    <h3 class="modal-title" id="exampleModalLabel">Reserve a Table</h3>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="card">
+                            <div class="card-body">
+                                <form id="reserveform">
+                                    <div class="form-group row">
+                                        <label class="col-12 col-md-3 col-form-label" for="firstname">Number of Guests</label>
+                                        <div class="col-2 col-md-1 offset-1">
+                                            <input class="form-check-input" type="radio" name="guest" id="a" value=""><label for="a">1</label>
+                                        </div>
+                                        <div class="col-2 col-md-1">
+                                            <input class="form-check-input" type="radio" name="guest" id="b" value=""><label for="b">2</label>
+                                        </div>
+                                        <div class="col-2 col-md-1">
+                                            <input class="form-check-input" type="radio" name="guest" id="c" value=""><label for="c">3</label>
+                                        </div>
+                                        <div class="col-2 col-md-1">
+                                            <input class="form-check-input" type="radio" name="guest" id="d" value=""><label for="d">4</label>
+                                        </div>
+                                        <div class="col-2 col-md-1">
+                                            <input class="form-check-input" type="radio" name="guest" id="e" value=""><label for="e">5</label>
+                                        </div>
+                                        <div class="col-2 offset-1 col-sm-1 offset-sm-1 offset-md-0 ">
+                                            <input class="form-check-input" type="radio" name="guest" id="f" value=""><label for="f">6</label>
+                                        </div>
+                                    </div>
+
+                                    <div class="form-group row">
+                                        <label class="col-12 col-md-3 col-form-label" for="smoke">Section</label>
+                                        <div class="col-12 col-md-4">
+                                            <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                                                <label class="btn btn-success active">
+                                                <input type="radio" name="options" id="option1" autocomplete="off" checked>Non-Smoking
+                                                </label>
+                                                <label class="btn btn-danger">
+                                                <input type="radio" name="options" id="option2" autocomplete="off"> Smoking
+                                                </label>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="form-group row">
+                                        <label class="col-12 col-md-3 col-form-label" for="time">Date and Time</label>
+                                        <div class="col-12 col-md-4">
+                                            <input type="date" class="form-control" id="date" name="date">
+                                        </div>
+                                        <div class=" col-12 col-md-4">
+                                            <input type="time" class="form-control" id="time" name="time">
+                                        </div>
+                                    </div>
+                                    <div class="form-group row">
+                                        <div class="offset-md-3 col-md-2">
+                                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                                        </div>
+                                        <div class="col-md-2">
+                                            <button type="submit" class="btn btn-primary">Reserve</button>
+                                            </div>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
     <div class="container">
         <div class="row row-content">
@@ -192,53 +265,7 @@
             </div>
         </div>
 
-        <!-- row4/card guests -->
-        <div class="row row-content align-items-center">
-            <div class="col-12 col-sm-8 offset-sm-2 ">
-                <div class="card">
-                    <h3 class="card-header bg-warning text-white">Reserve a table</h3>
-                    <div class="card-body">
-                        <form id="reserveform">
-                            <div class="form-group row">
-                                <label class="col-md-2 col-form-label" for="firstname">Number of Guests</label>
-                                <div class="col-2 col-md-1 offset-1">
-                                    <input class="form-check-input" type="radio" name="guest" id="a" value=""><label for="a">1</label>
-                                </div>
-                                <div class="col-2 col-md-1">
-                                    <input class="form-check-input" type="radio" name="guest" id="b" value=""><label for="b">2</label>
-                                </div>
-                                <div class="col-2 col-md-1">
-                                    <input class="form-check-input" type="radio" name="guest" id="c" value=""><label for="c">3</label>
-                                </div>
-                                <div class="col-2 col-md-1">
-                                    <input class="form-check-input" type="radio" name="guest" id="d" value=""><label for="d">4</label>
-                                </div>
-                                <div class="col-2 col-md-1">
-                                    <input class="form-check-input" type="radio" name="guest" id="e" value=""><label for="e">5</label>
-                                </div>
-                                <div class="col-2 offset-1 col-md-1 offset-sm-0 ">
-                                    <input class="form-check-input" type="radio" name="guest" id="f" value=""><label for="f">6</label>
-                                </div>
-                            </div>
-                            <div class="form-group row">
-                                <label class="col-12 col-md-2 col-form-label" for="time">Date and Time</label>
-                                <div class="col-12 col-md-4">
-                                    <input type="date" class="form-control" id="date" name="date">
-                                </div>
-                                <div class=" col-12 col-md-4">
-                                    <input type="time" class="form-control" id="time" name="time">
-                                </div>
-                            </div>
-                            <div class="form-group row">
-                                <div class="offset-md-2 col-md-2">
-                                <button type="submit" class="btn btn-primary">Reserve</button>
-                                </div>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
+
 
 
     </div>
@@ -289,11 +316,7 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script>
-        $(document).ready(function(){
-            $('[data-toggle="tooltip"]').tooltip();
-        });
-    </script>
+
 
 </body>
 
