--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <li class="nav-item"><a class="nav-link" href="./contactus.html"><span class="fa fa-address-card fa-lg"></span> Contact</a></li>
                 </ul>
                 <span class="navbar-text">
-                    <a data-toggle="modal" data-target="#loginModal">
+                    <a id="loginLink">
                     <span class="fa fa-sign-in"></span> Login</a>
                 </span>
             </div>            
@@ -89,7 +89,7 @@
                     <img src="img/logo.png" class="img-fluid ">
                 </div>
                 <div class="col-12 col-sm-3 align-self-center">
-                    <button type="button"  class="btn  btn-warning nav-link btn-block btn-sm text-white " data-toggle="modal" data-target="#exampleModal">
+                    <button id="reserveButton" type="button"  class="btn  btn-warning nav-link btn-block btn-sm text-white " >
                         Reserve a Table
                     </button>
                 </div>
@@ -106,9 +106,7 @@
                     </button>
                     </div>
                     <div class="modal-body">
-                        <div class="card">
-                            <div class="card-body">
-                                <form id="reserveform">
+                        <form id="reserveform">
                                     <div class="form-group row">
                                         <label class="col-12 col-md-3 col-form-label" for="firstname">Number of Guests</label>
                                         <div class="col-2 col-md-1 offset-1">
@@ -163,8 +161,6 @@
                                             </div>
                                     </div>
                                 </form>
-                            </div>
-                        </div>
                     </div>
                 </div>
             </div>
@@ -333,6 +329,16 @@
                     $("#carouselButton").children("span").addClass("fa-pause");
                 }
                 
+            });
+        });
+    </script>
+    <script>
+        $(document).ready(function(){
+            $("#reserveButton").click(function(){
+                $("#exampleModal").modal();
+            });
+            $("#loginLink").click(function(){
+                $("#loginModal").modal();
             });
         });
     </script>
